tests/e2e/authz-server/http/allow/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: allow
spec:
  steps:
  - name: create istio policy
    use:
      template: ../../../_step-templates/authorizer.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: create shell
    use:
      template: ../../../_step-templates/shell.yaml
  - try:
    - sleep:
        duration: 150s
  - try:
    - script:
        content: >
          kubectl exec -n $NAMESPACE deploy/curl -- curl -s -w "\nhttp_code=%{http_code}" http-srv.app/get
        check:
          (wildcard('*http_code=200', $stdout)): true
